# exiletradelens

./: .gitignore  README.md  TODO.md  package-lock.json  package.json
python/: .gitignore  ocr_process.py  patch_torchfree_ocr.py  requirements.txt  setup.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/services/: hotkey.rs  mod.rs  ocr_process.rs  ocr_validator.rs  websocket.rs
src/components/Content/: index.tsx
src/components/Header/: SwitchVersion.tsx  index.tsx
src/components/Sidebar/: index.tsx
src/store/: index.ts  userSlice.ts
